* Fixed issue #38: Rename cppencoder namespace to code::cpp.
* Fixed issue #39: Rename logger namespace to logging.
* Fixed issue #43: Consider using Google's C++ Style Guide.
* Fixed issue #44: Remove usage of the word 'folder' for functions in ra::filesystem namespace.
* Fixed issue #45: Deprecate functions from ra::testing namespace that are available in other namespaces.

Changes for 0.6.0:

* Fixed issue #15: ra::filesystem::readFile() and writeFile().
* Fixed issue #16: SAFE_WARNING_DISABLE macro.
* Fixed issue #17: SAFE_DELETE macro.
* Fixed issue #18: Create `errors` namespace.
* Fixed issue #19: where() or which() function.
* Fixed issue #21: New vector manipulation generic functions.
* Fixed issue #22: ra::filesystem::getFilenameWithoutExtension().
* Fixed issue #23: ra::environment::getEnvironmentVariables().
* Fixed issue #24: ra::user::getUsername().
* Fixed issue #25: Get current user system directories.
* Fixed issue #26: parseBoolean() and toString(bool).
* Fixed issue #27: createFolder() fails with absolute path.
* Fixed issue #28: ra::filesystem::makeRelativePath().
* Fixed issue #29: ra::filesystem::copyFile().
* Fixed issue #31: ra::environment::expand().
* Fixed issue #32: Implement a key-value store for storing basic configuration values.
* Fixed issue #33: ra::process::startProcess().
* Fixed issue #34: ra::filesystem::writeTextFile().
* Fixed issue #37: Move ra:gtesthelp::getTextFileContent() to ra::filesystem::readTextFileContent().
* Fixed issue #40: parseBoolean() and parse(bool) should properly parse 'Y' or 'N' values.
* Fixed issue #41: ra::process::getExitCode(pid) and ra::process::waitExit(pid).
* Fixed issue #42: ra::console::waitKeyPress().

Changes for 0.5.0:

* New feature: Implemented ra::strings::trim() and ra::strings::reverse().
* New feature: Implemented console text color support.